# aarushi-barcode-106f2cb1f-78b6-4c6f-a69b-2dc542315bdc

./: .env.example  README.md  pyproject.toml  schema.prisma
project/: generate_barcode_service.py  server.py  validate_input_data_service.py
